<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto" >>
    <item android:id="@+id/action_login"
          android:title="@string/action_login"
          android:orderInCategory="50"
        />
    <item android:id="@+id/action_results"
          android:title="@string/action_results"
          android:orderInCategory="100"
          android:icon="@drawable/ic_action_paste"
          app:showAsAction="ifRoom"
        />
    <item android:id="@+id/action_ertekel"
          android:title="@string/action_ertekel"
          android:orderInCategory="200"
          android:icon="@drawable/ic_action_edit"
          app:showAsAction="ifRoom"
        />
    <item android:id="@+id/action_logout"
          android:title="@string/action_logout"
          android:orderInCategory="300"
        />
</menu>