<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center|center_vertical"
    android:weightSum="1">
    <TextView
        android:id="@+id/tv0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_login"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/tv1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Felhasználónév"
        />
    <EditText
        android:text=""
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="true">
    </EditText>
    <TextView
        android:id="@+id/tv2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Jelszó"
        />
    <EditText
        android:text=""
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:inputType="textPassword">
    </EditText>
    <Button
        android:text="@string/action_login"
        android:id="@+id/Login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    </Button>
    <Button
        android:text="@string/action_register"
        android:id="@+id/Register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    </Button>
    <Button
        android:text="@string/action_forgotPassword"
        android:id="@+id/ForgotPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    </Button>
</LinearLayout>